src/grammar.output
Terminals unused in grammar

   RETURN
   PROCESSOR
   LINK
   CLUSTER
   JOB
   MEMORY
   JOB_ID
   FLOPS_REQUIRED
   DEADLINE
   AFFINITY
   ALGO
   ISA
   CLOCK_SPEED
   MEM_REQUIRED
   MEMORY_TYPE
   SCHEDULER
   L1_MEMORY
   L2_MEMORY
   MEM_SIZE
   NAME
   START_POINT
   END_POINT
   BANDWIDTH
   CHANNEL_CAPACITY
   TOPOLOGY
   LINK_CAPACITY
   LINK_BANDWIDTH
   GET_AVAILABLE_MEMORY
   GET_MEMORY
   IS_RUNNING
   SUBMIT_JOBS
   GET_CLOCK_SPEED
   DISCARD_JOB
   RUN
   SCHED


Grammar

    0 $accept: statement_list $end

    1 statement_list: statement statement_list
    2               | %empty

    3 statement: expression_statement
    4          | selection_statement
    5          | iteration_statement
    6          | OPEN_CURLY statement_list CLOSED_CURLY
    7          | declaration

    8 declaration: type_specifier declarator ASSIGN assignment_expression SEMI

    9 declarator: ID
   10           | declarator OPEN_SQUARE assignment_expression CLOSED_SQUARE
   11           | declarator OPEN_SQUARE CLOSED_SQUARE

   12 type_specifier: VOID
   13               | CHAR
   14               | INT
   15               | FLOAT
   16               | BOOL

   17 primary_expression: ID
   18                   | NUM
   19                   | REAL
   20                   | STRING_LITERAL
   21                   | OPEN_BRACKET expression CLOSED_BRACKET
   22                   | OPEN_SQUARE argument_expression_list CLOSED_SQUARE

   23 postfix_expression: primary_expression
   24                   | postfix_expression OPEN_SQUARE expression CLOSED_SQUARE
   25                   | postfix_expression OPEN_BRACKET CLOSED_BRACKET
   26                   | postfix_expression OPEN_BRACKET argument_expression_list CLOSED_BRACKET
   27                   | postfix_expression DOT ID
   28                   | postfix_expression PTR_OP ID
   29                   | postfix_expression INC_OP
   30                   | postfix_expression DEC_OP

   31 argument_expression_list: assignment_expression
   32                         | argument_expression_list COMMA assignment_expression

   33 unary_expression: postfix_expression
   34                 | INC_OP unary_expression
   35                 | DEC_OP unary_expression
   36                 | unary_operator unary_expression

   37 unary_operator: AMP
   38               | STAR
   39               | PLUS
   40               | MINUS
   41               | TILDE
   42               | NOT

   43 multiplicative_expression: unary_expression
   44                          | multiplicative_expression STAR unary_expression
   45                          | multiplicative_expression DIVIDE unary_expression
   46                          | multiplicative_expression MODULUS unary_expression

   47 additive_expression: multiplicative_expression
   48                    | additive_expression PLUS multiplicative_expression
   49                    | additive_expression MINUS multiplicative_expression

   50 relational_expression: additive_expression
   51                      | relational_expression LT additive_expression
   52                      | relational_expression GT additive_expression
   53                      | relational_expression LE_OP additive_expression
   54                      | relational_expression GE_OP additive_expression

   55 equality_expression: relational_expression
   56                    | equality_expression EQ_OP relational_expression
   57                    | equality_expression NE_OP relational_expression

   58 and_expression: equality_expression
   59               | and_expression AMP equality_expression

   60 exclusive_or_expression: and_expression
   61                        | exclusive_or_expression XOR and_expression

   62 inclusive_or_expression: exclusive_or_expression
   63                        | inclusive_or_expression PIPE exclusive_or_expression

   64 logical_and_expression: inclusive_or_expression
   65                       | logical_and_expression AND_OP inclusive_or_expression

   66 logical_or_expression: logical_and_expression
   67                      | logical_or_expression OR_OP logical_and_expression

   68 conditional_expression: logical_or_expression
   69                       | logical_or_expression QUES expression COLON conditional_expression

   70 assignment_expression: conditional_expression
   71                      | unary_expression ASSIGN assignment_expression

   72 expression: assignment_expression
   73           | expression COMMA assignment_expression

   74 iteration_statement: WHILE OPEN_BRACKET expression CLOSED_BRACKET statement
   75                    | DO statement WHILE OPEN_BRACKET expression CLOSED_BRACKET SEMI
   76                    | FOR OPEN_BRACKET expression_statement expression_statement CLOSED_BRACKET statement
   77                    | FOR OPEN_BRACKET expression_statement expression_statement expression CLOSED_BRACKET statement
   78                    | FOR OPEN_BRACKET declaration expression_statement CLOSED_BRACKET statement
   79                    | FOR OPEN_BRACKET declaration expression_statement expression CLOSED_BRACKET statement

   80 selection_statement: IF OPEN_BRACKET expression CLOSED_BRACKET statement ELSE statement
   81                    | IF OPEN_BRACKET expression CLOSED_BRACKET statement

   82 expression_statement: SEMI
   83                     | expression SEMI


Terminals, with rules where they appear

$end (0) 0
error (256)
CHAR (258) 13
ELSE (259) 80
FLOAT (260) 15
FOR (261) 76 77 78 79
IF (262) 80 81
INT (263) 14
RETURN (264)
VOID (265) 12
WHILE (266) 74 75
PTR_OP (267) 28
INC_OP (268) 29 34
DEC_OP (269) 30 35
AND_OP (270) 65
OR_OP (271) 67
LT (272) 51
GT (273) 52
LE_OP (274) 53
GE_OP (275) 54
EQ_OP (276) 56
NE_OP (277) 57
BOOL (278) 16
DO (279) 75
NOT (280) 42
AMP (281) 37 59
TILDE (282) 41
STAR (283) 38 44
ASSIGN (284) 8 71
PROCESSOR (285)
LINK (286)
CLUSTER (287)
JOB (288)
MEMORY (289)
JOB_ID (290)
FLOPS_REQUIRED (291)
DEADLINE (292)
AFFINITY (293)
ALGO (294)
ISA (295)
CLOCK_SPEED (296)
MEM_REQUIRED (297)
ID (298) 9 17 27 28
MEMORY_TYPE (299)
SCHEDULER (300)
NUM (301) 18
REAL (302) 19
STRING_LITERAL (303) 20
L1_MEMORY (304)
L2_MEMORY (305)
MEM_SIZE (306)
NAME (307)
START_POINT (308)
END_POINT (309)
BANDWIDTH (310)
CHANNEL_CAPACITY (311)
TOPOLOGY (312)
LINK_CAPACITY (313)
LINK_BANDWIDTH (314)
GET_AVAILABLE_MEMORY (315)
GET_MEMORY (316)
IS_RUNNING (317)
SUBMIT_JOBS (318)
GET_CLOCK_SPEED (319)
DISCARD_JOB (320)
RUN (321)
OPEN_BRACKET (322) 21 25 26 74 75 76 77 78 79 80 81
CLOSED_BRACKET (323) 21 25 26 74 75 76 77 78 79 80 81
OPEN_CURLY (324) 6
CLOSED_CURLY (325) 6
OPEN_SQUARE (326) 10 11 22 24
CLOSED_SQUARE (327) 10 11 22 24
SEMI (328) 8 75 82 83
COMMA (329) 32 73
DOT (330) 27
PLUS (331) 39 48
MINUS (332) 40 49
DIVIDE (333) 45
MODULUS (334) 46
PIPE (335) 63
XOR (336) 61
QUES (337) 69
COLON (338) 69
SCHED (339)
"UIF" (340)


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
statement_list (87)
    on left: 1 2, on right: 0 1 6
statement (88)
    on left: 3 4 5 6 7, on right: 1 74 75 76 77 78 79 80 81
declaration (89)
    on left: 8, on right: 7 78 79
declarator (90)
    on left: 9 10 11, on right: 8 10 11
type_specifier (91)
    on left: 12 13 14 15 16, on right: 8
primary_expression (92)
    on left: 17 18 19 20 21 22, on right: 23
postfix_expression (93)
    on left: 23 24 25 26 27 28 29 30, on right: 24 25 26 27 28 29 30
    33
argument_expression_list (94)
    on left: 31 32, on right: 22 26 32
unary_expression (95)
    on left: 33 34 35 36, on right: 34 35 36 43 44 45 46 71
unary_operator (96)
    on left: 37 38 39 40 41 42, on right: 36
multiplicative_expression (97)
    on left: 43 44 45 46, on right: 44 45 46 47 48 49
additive_expression (98)
    on left: 47 48 49, on right: 48 49 50 51 52 53 54
relational_expression (99)
    on left: 50 51 52 53 54, on right: 51 52 53 54 55 56 57
equality_expression (100)
    on left: 55 56 57, on right: 56 57 58 59
and_expression (101)
    on left: 58 59, on right: 59 60 61
exclusive_or_expression (102)
    on left: 60 61, on right: 61 62 63
inclusive_or_expression (103)
    on left: 62 63, on right: 63 64 65
logical_and_expression (104)
    on left: 64 65, on right: 65 66 67
logical_or_expression (105)
    on left: 66 67, on right: 67 68 69
conditional_expression (106)
    on left: 68 69, on right: 69 70
assignment_expression (107)
    on left: 70 71, on right: 8 10 31 32 71 72 73
expression (108)
    on left: 72 73, on right: 21 24 69 73 74 75 77 79 80 81 83
iteration_statement (109)
    on left: 74 75 76 77 78 79, on right: 5
selection_statement (110)
    on left: 80 81, on right: 4
expression_statement (111)
    on left: 82 83, on right: 3 76 77 78 79


State 0

    0 $accept: . statement_list $end

    CHAR            shift, and go to state 1
    FLOAT           shift, and go to state 2
    FOR             shift, and go to state 3
    IF              shift, and go to state 4
    INT             shift, and go to state 5
    VOID            shift, and go to state 6
    WHILE           shift, and go to state 7
    INC_OP          shift, and go to state 8
    DEC_OP          shift, and go to state 9
    BOOL            shift, and go to state 10
    DO              shift, and go to state 11
    NOT             shift, and go to state 12
    AMP             shift, and go to state 13
    TILDE           shift, and go to state 14
    STAR            shift, and go to state 15
    ID              shift, and go to state 16
    NUM             shift, and go to state 17
    REAL            shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    OPEN_BRACKET    shift, and go to state 20
    OPEN_CURLY      shift, and go to state 21
    OPEN_SQUARE     shift, and go to state 22
    SEMI            shift, and go to state 23
    PLUS            shift, and go to state 24
    MINUS           shift, and go to state 25

    $default  reduce using rule 2 (statement_list)

    statement_list             go to state 26
    statement                  go to state 27
    declaration                go to state 28
    type_specifier             go to state 29
    primary_expression         go to state 30
    postfix_expression         go to state 31
    unary_expression           go to state 32
    unary_operator             go to state 33
    multiplicative_expression  go to state 34
    additive_expression        go to state 35
    relational_expression      go to state 36
    equality_expression        go to state 37
    and_expression             go to state 38
    exclusive_or_expression    go to state 39
    inclusive_or_expression    go to state 40
    logical_and_expression     go to state 41
    logical_or_expression      go to state 42
    conditional_expression     go to state 43
    assignment_expression      go to state 44
    expression                 go to state 45
    iteration_statement        go to state 46
    selection_statement        go to state 47
    expression_statement       go to state 48


State 1

   13 type_specifier: CHAR .

    $default  reduce using rule 13 (type_specifier)


State 2

   15 type_specifier: FLOAT .

    $default  reduce using rule 15 (type_specifier)


State 3

   76 iteration_statement: FOR . OPEN_BRACKET expression_statement expression_statement CLOSED_BRACKET statement
   77                    | FOR . OPEN_BRACKET expression_statement expression_statement expression CLOSED_BRACKET statement
   78                    | FOR . OPEN_BRACKET declaration expression_statement CLOSED_BRACKET statement
   79                    | FOR . OPEN_BRACKET declaration expression_statement expression CLOSED_BRACKET statement

    OPEN_BRACKET  shift, and go to state 49


State 4

   80 selection_statement: IF . OPEN_BRACKET expression CLOSED_BRACKET statement ELSE statement
   81                    | IF . OPEN_BRACKET expression CLOSED_BRACKET statement

    OPEN_BRACKET  shift, and go to state 50


State 5

   14 type_specifier: INT .

    $default  reduce using rule 14 (type_specifier)


State 6

   12 type_specifier: VOID .

    $default  reduce using rule 12 (type_specifier)


State 7

   74 iteration_statement: WHILE . OPEN_BRACKET expression CLOSED_BRACKET statement

    OPEN_BRACKET  shift, and go to state 51


State 8

   34 unary_expression: INC_OP . unary_expression

    INC_OP          shift, and go to state 8
    DEC_OP          shift, and go to state 9
    NOT             shift, and go to state 12
    AMP             shift, and go to state 13
    TILDE           shift, and go to state 14
    STAR            shift, and go to state 15
    ID              shift, and go to state 16
    NUM             shift, and go to state 17
    REAL            shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    OPEN_BRACKET    shift, and go to state 20
    OPEN_SQUARE     shift, and go to state 22
    PLUS            shift, and go to state 24
    MINUS           shift, and go to state 25

    primary_expression  go to state 30
    postfix_expression  go to state 31
    unary_expression    go to state 52
    unary_operator      go to state 33


State 9

   35 unary_expression: DEC_OP . unary_expression

    INC_OP          shift, and go to state 8
    DEC_OP          shift, and go to state 9
    NOT             shift, and go to state 12
    AMP             shift, and go to state 13
    TILDE           shift, and go to state 14
    STAR            shift, and go to state 15
    ID              shift, and go to state 16
    NUM             shift, and go to state 17
    REAL            shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    OPEN_BRACKET    shift, and go to state 20
    OPEN_SQUARE     shift, and go to state 22
    PLUS            shift, and go to state 24
    MINUS           shift, and go to state 25

    primary_expression  go to state 30
    postfix_expression  go to state 31
    unary_expression    go to state 53
    unary_operator      go to state 33


State 10

   16 type_specifier: BOOL .

    $default  reduce using rule 16 (type_specifier)


State 11

   75 iteration_statement: DO . statement WHILE OPEN_BRACKET expression CLOSED_BRACKET SEMI

    CHAR            shift, and go to state 1
    FLOAT           shift, and go to state 2
    FOR             shift, and go to state 3
    IF              shift, and go to state 4
    INT             shift, and go to state 5
    VOID            shift, and go to state 6
    WHILE           shift, and go to state 7
    INC_OP          shift, and go to state 8
    DEC_OP          shift, and go to state 9
    BOOL            shift, and go to state 10
    DO              shift, and go to state 11
    NOT             shift, and go to state 12
    AMP             shift, and go to state 13
    TILDE           shift, and go to state 14
    STAR            shift, and go to state 15
    ID              shift, and go to state 16
    NUM             shift, and go to state 17
    REAL            shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    OPEN_BRACKET    shift, and go to state 20
    OPEN_CURLY      shift, and go to state 21
    OPEN_SQUARE     shift, and go to state 22
    SEMI            shift, and go to state 23
    PLUS            shift, and go to state 24
    MINUS           shift, and go to state 25

    statement                  go to state 54
    declaration                go to state 28
    type_specifier             go to state 29
    primary_expression         go to state 30
    postfix_expression         go to state 31
    unary_expression           go to state 32
    unary_operator             go to state 33
    multiplicative_expression  go to state 34
    additive_expression        go to state 35
    relational_expression      go to state 36
    equality_expression        go to state 37
    and_expression             go to state 38
    exclusive_or_expression    go to state 39
    inclusive_or_expression    go to state 40
    logical_and_expression     go to state 41
    logical_or_expression      go to state 42
    conditional_expression     go to state 43
    assignment_expression      go to state 44
    expression                 go to state 45
    iteration_statement        go to state 46
    selection_statement        go to state 47
    expression_statement       go to state 48


State 12

   42 unary_operator: NOT .

    $default  reduce using rule 42 (unary_operator)


State 13

   37 unary_operator: AMP .

    $default  reduce using rule 37 (unary_operator)


State 14

   41 unary_operator: TILDE .

    $default  reduce using rule 41 (unary_operator)


State 15

   38 unary_operator: STAR .

    $default  reduce using rule 38 (unary_operator)


State 16

   17 primary_expression: ID .

    $default  reduce using rule 17 (primary_expression)


State 17

   18 primary_expression: NUM .

    $default  reduce using rule 18 (primary_expression)


State 18

   19 primary_expression: REAL .

    $default  reduce using rule 19 (primary_expression)


State 19

   20 primary_expression: STRING_LITERAL .

    $default  reduce using rule 20 (primary_expression)


State 20

   21 primary_expression: OPEN_BRACKET . expression CLOSED_BRACKET

    INC_OP          shift, and go to state 8
    DEC_OP          shift, and go to state 9
    NOT             shift, and go to state 12
    AMP             shift, and go to state 13
    TILDE           shift, and go to state 14
    STAR            shift, and go to state 15
    ID              shift, and go to state 16
    NUM             shift, and go to state 17
    REAL            shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    OPEN_BRACKET    shift, and go to state 20
    OPEN_SQUARE     shift, and go to state 22
    PLUS            shift, and go to state 24
    MINUS           shift, and go to state 25

    primary_expression         go to state 30
    postfix_expression         go to state 31
    unary_expression           go to state 32
    unary_operator             go to state 33
    multiplicative_expression  go to state 34
    additive_expression        go to state 35
    relational_expression      go to state 36
    equality_expression        go to state 37
    and_expression             go to state 38
    exclusive_or_expression    go to state 39
    inclusive_or_expression    go to state 40
    logical_and_expression     go to state 41
    logical_or_expression      go to state 42
    conditional_expression     go to state 43
    assignment_expression      go to state 44
    expression                 go to state 55


State 21

    6 statement: OPEN_CURLY . statement_list CLOSED_CURLY

    CHAR            shift, and go to state 1
    FLOAT           shift, and go to state 2
    FOR             shift, and go to state 3
    IF              shift, and go to state 4
    INT             shift, and go to state 5
    VOID            shift, and go to state 6
    WHILE           shift, and go to state 7
    INC_OP          shift, and go to state 8
    DEC_OP          shift, and go to state 9
    BOOL            shift, and go to state 10
    DO              shift, and go to state 11
    NOT             shift, and go to state 12
    AMP             shift, and go to state 13
    TILDE           shift, and go to state 14
    STAR            shift, and go to state 15
    ID              shift, and go to state 16
    NUM             shift, and go to state 17
    REAL            shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    OPEN_BRACKET    shift, and go to state 20
    OPEN_CURLY      shift, and go to state 21
    OPEN_SQUARE     shift, and go to state 22
    SEMI            shift, and go to state 23
    PLUS            shift, and go to state 24
    MINUS           shift, and go to state 25

    $default  reduce using rule 2 (statement_list)

    statement_list             go to state 56
    statement                  go to state 27
    declaration                go to state 28
    type_specifier             go to state 29
    primary_expression         go to state 30
    postfix_expression         go to state 31
    unary_expression           go to state 32
    unary_operator             go to state 33
    multiplicative_expression  go to state 34
    additive_expression        go to state 35
    relational_expression      go to state 36
    equality_expression        go to state 37
    and_expression             go to state 38
    exclusive_or_expression    go to state 39
    inclusive_or_expression    go to state 40
    logical_and_expression     go to state 41
    logical_or_expression      go to state 42
    conditional_expression     go to state 43
    assignment_expression      go to state 44
    expression                 go to state 45
    iteration_statement        go to state 46
    selection_statement        go to state 47
    expression_statement       go to state 48


State 22

   22 primary_expression: OPEN_SQUARE . argument_expression_list CLOSED_SQUARE

    INC_OP          shift, and go to state 8
    DEC_OP          shift, and go to state 9
    NOT             shift, and go to state 12
    AMP             shift, and go to state 13
    TILDE           shift, and go to state 14
    STAR            shift, and go to state 15
    ID              shift, and go to state 16
    NUM             shift, and go to state 17
    REAL            shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    OPEN_BRACKET    shift, and go to state 20
    OPEN_SQUARE     shift, and go to state 22
    PLUS            shift, and go to state 24
    MINUS           shift, and go to state 25

    primary_expression         go to state 30
    postfix_expression         go to state 31
    argument_expression_list   go to state 57
    unary_expression           go to state 32
    unary_operator             go to state 33
    multiplicative_expression  go to state 34
    additive_expression        go to state 35
    relational_expression      go to state 36
    equality_expression        go to state 37
    and_expression             go to state 38
    exclusive_or_expression    go to state 39
    inclusive_or_expression    go to state 40
    logical_and_expression     go to state 41
    logical_or_expression      go to state 42
    conditional_expression     go to state 43
    assignment_expression      go to state 58


State 23

   82 expression_statement: SEMI .

    $default  reduce using rule 82 (expression_statement)


State 24

   39 unary_operator: PLUS .

    $default  reduce using rule 39 (unary_operator)


State 25

   40 unary_operator: MINUS .

    $default  reduce using rule 40 (unary_operator)


State 26

    0 $accept: statement_list . $end

    $end  shift, and go to state 59


State 27

    1 statement_list: statement . statement_list

    CHAR            shift, and go to state 1
    FLOAT           shift, and go to state 2
    FOR             shift, and go to state 3
    IF              shift, and go to state 4
    INT             shift, and go to state 5
    VOID            shift, and go to state 6
    WHILE           shift, and go to state 7
    INC_OP          shift, and go to state 8
    DEC_OP          shift, and go to state 9
    BOOL            shift, and go to state 10
    DO              shift, and go to state 11
    NOT             shift, and go to state 12
    AMP             shift, and go to state 13
    TILDE           shift, and go to state 14
    STAR            shift, and go to state 15
    ID              shift, and go to state 16
    NUM             shift, and go to state 17
    REAL            shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    OPEN_BRACKET    shift, and go to state 20
    OPEN_CURLY      shift, and go to state 21
    OPEN_SQUARE     shift, and go to state 22
    SEMI            shift, and go to state 23
    PLUS            shift, and go to state 24
    MINUS           shift, and go to state 25

    $default  reduce using rule 2 (statement_list)

    statement_list             go to state 60
    statement                  go to state 27
    declaration                go to state 28
    type_specifier             go to state 29
    primary_expression         go to state 30
    postfix_expression         go to state 31
    unary_expression           go to state 32
    unary_operator             go to state 33
    multiplicative_expression  go to state 34
    additive_expression        go to state 35
    relational_expression      go to state 36
    equality_expression        go to state 37
    and_expression             go to state 38
    exclusive_or_expression    go to state 39
    inclusive_or_expression    go to state 40
    logical_and_expression     go to state 41
    logical_or_expression      go to state 42
    conditional_expression     go to state 43
    assignment_expression      go to state 44
    expression                 go to state 45
    iteration_statement        go to state 46
    selection_statement        go to state 47
    expression_statement       go to state 48


State 28

    7 statement: declaration .

    $default  reduce using rule 7 (statement)


State 29

    8 declaration: type_specifier . declarator ASSIGN assignment_expression SEMI

    ID  shift, and go to state 61

    declarator  go to state 62


State 30

   23 postfix_expression: primary_expression .

    $default  reduce using rule 23 (postfix_expression)


State 31

   24 postfix_expression: postfix_expression . OPEN_SQUARE expression CLOSED_SQUARE
   25                   | postfix_expression . OPEN_BRACKET CLOSED_BRACKET
   26                   | postfix_expression . OPEN_BRACKET argument_expression_list CLOSED_BRACKET
   27                   | postfix_expression . DOT ID
   28                   | postfix_expression . PTR_OP ID
   29                   | postfix_expression . INC_OP
   30                   | postfix_expression . DEC_OP
   33 unary_expression: postfix_expression .

    PTR_OP        shift, and go to state 63
    INC_OP        shift, and go to state 64
    DEC_OP        shift, and go to state 65
    OPEN_BRACKET  shift, and go to state 66
    OPEN_SQUARE   shift, and go to state 67
    DOT           shift, and go to state 68

    $default  reduce using rule 33 (unary_expression)


State 32

   43 multiplicative_expression: unary_expression .
   71 assignment_expression: unary_expression . ASSIGN assignment_expression

    ASSIGN  shift, and go to state 69

    $default  reduce using rule 43 (multiplicative_expression)


State 33

   36 unary_expression: unary_operator . unary_expression

    INC_OP          shift, and go to state 8
    DEC_OP          shift, and go to state 9
    NOT             shift, and go to state 12
    AMP             shift, and go to state 13
    TILDE           shift, and go to state 14
    STAR            shift, and go to state 15
    ID              shift, and go to state 16
    NUM             shift, and go to state 17
    REAL            shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    OPEN_BRACKET    shift, and go to state 20
    OPEN_SQUARE     shift, and go to state 22
    PLUS            shift, and go to state 24
    MINUS           shift, and go to state 25

    primary_expression  go to state 30
    postfix_expression  go to state 31
    unary_expression    go to state 70
    unary_operator      go to state 33


State 34

   44 multiplicative_expression: multiplicative_expression . STAR unary_expression
   45                          | multiplicative_expression . DIVIDE unary_expression
   46                          | multiplicative_expression . MODULUS unary_expression
   47 additive_expression: multiplicative_expression .

    STAR     shift, and go to state 71
    DIVIDE   shift, and go to state 72
    MODULUS  shift, and go to state 73

    $default  reduce using rule 47 (additive_expression)


State 35

   48 additive_expression: additive_expression . PLUS multiplicative_expression
   49                    | additive_expression . MINUS multiplicative_expression
   50 relational_expression: additive_expression .

    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75

    $default  reduce using rule 50 (relational_expression)


State 36

   51 relational_expression: relational_expression . LT additive_expression
   52                      | relational_expression . GT additive_expression
   53                      | relational_expression . LE_OP additive_expression
   54                      | relational_expression . GE_OP additive_expression
   55 equality_expression: relational_expression .

    LT     shift, and go to state 76
    GT     shift, and go to state 77
    LE_OP  shift, and go to state 78
    GE_OP  shift, and go to state 79

    $default  reduce using rule 55 (equality_expression)


State 37

   56 equality_expression: equality_expression . EQ_OP relational_expression
   57                    | equality_expression . NE_OP relational_expression
   58 and_expression: equality_expression .

    EQ_OP  shift, and go to state 80
    NE_OP  shift, and go to state 81

    $default  reduce using rule 58 (and_expression)


State 38

   59 and_expression: and_expression . AMP equality_expression
   60 exclusive_or_expression: and_expression .

    AMP  shift, and go to state 82

    $default  reduce using rule 60 (exclusive_or_expression)


State 39

   61 exclusive_or_expression: exclusive_or_expression . XOR and_expression
   62 inclusive_or_expression: exclusive_or_expression .

    XOR  shift, and go to state 83

    $default  reduce using rule 62 (inclusive_or_expression)


State 40

   63 inclusive_or_expression: inclusive_or_expression . PIPE exclusive_or_expression
   64 logical_and_expression: inclusive_or_expression .

    PIPE  shift, and go to state 84

    $default  reduce using rule 64 (logical_and_expression)


State 41

   65 logical_and_expression: logical_and_expression . AND_OP inclusive_or_expression
   66 logical_or_expression: logical_and_expression .

    AND_OP  shift, and go to state 85

    $default  reduce using rule 66 (logical_or_expression)


State 42

   67 logical_or_expression: logical_or_expression . OR_OP logical_and_expression
   68 conditional_expression: logical_or_expression .
   69                       | logical_or_expression . QUES expression COLON conditional_expression

    OR_OP  shift, and go to state 86
    QUES   shift, and go to state 87

    $default  reduce using rule 68 (conditional_expression)


State 43

   70 assignment_expression: conditional_expression .

    $default  reduce using rule 70 (assignment_expression)


State 44

   72 expression: assignment_expression .

    $default  reduce using rule 72 (expression)


State 45

   73 expression: expression . COMMA assignment_expression
   83 expression_statement: expression . SEMI

    SEMI   shift, and go to state 88
    COMMA  shift, and go to state 89


State 46

    5 statement: iteration_statement .

    $default  reduce using rule 5 (statement)


State 47

    4 statement: selection_statement .

    $default  reduce using rule 4 (statement)


State 48

    3 statement: expression_statement .

    $default  reduce using rule 3 (statement)


State 49

   76 iteration_statement: FOR OPEN_BRACKET . expression_statement expression_statement CLOSED_BRACKET statement
   77                    | FOR OPEN_BRACKET . expression_statement expression_statement expression CLOSED_BRACKET statement
   78                    | FOR OPEN_BRACKET . declaration expression_statement CLOSED_BRACKET statement
   79                    | FOR OPEN_BRACKET . declaration expression_statement expression CLOSED_BRACKET statement

    CHAR            shift, and go to state 1
    FLOAT           shift, and go to state 2
    INT             shift, and go to state 5
    VOID            shift, and go to state 6
    INC_OP          shift, and go to state 8
    DEC_OP          shift, and go to state 9
    BOOL            shift, and go to state 10
    NOT             shift, and go to state 12
    AMP             shift, and go to state 13
    TILDE           shift, and go to state 14
    STAR            shift, and go to state 15
    ID              shift, and go to state 16
    NUM             shift, and go to state 17
    REAL            shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    OPEN_BRACKET    shift, and go to state 20
    OPEN_SQUARE     shift, and go to state 22
    SEMI            shift, and go to state 23
    PLUS            shift, and go to state 24
    MINUS           shift, and go to state 25

    declaration                go to state 90
    type_specifier             go to state 29
    primary_expression         go to state 30
    postfix_expression         go to state 31
    unary_expression           go to state 32
    unary_operator             go to state 33
    multiplicative_expression  go to state 34
    additive_expression        go to state 35
    relational_expression      go to state 36
    equality_expression        go to state 37
    and_expression             go to state 38
    exclusive_or_expression    go to state 39
    inclusive_or_expression    go to state 40
    logical_and_expression     go to state 41
    logical_or_expression      go to state 42
    conditional_expression     go to state 43
    assignment_expression      go to state 44
    expression                 go to state 45
    expression_statement       go to state 91


State 50

   80 selection_statement: IF OPEN_BRACKET . expression CLOSED_BRACKET statement ELSE statement
   81                    | IF OPEN_BRACKET . expression CLOSED_BRACKET statement

    INC_OP          shift, and go to state 8
    DEC_OP          shift, and go to state 9
    NOT             shift, and go to state 12
    AMP             shift, and go to state 13
    TILDE           shift, and go to state 14
    STAR            shift, and go to state 15
    ID              shift, and go to state 16
    NUM             shift, and go to state 17
    REAL            shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    OPEN_BRACKET    shift, and go to state 20
    OPEN_SQUARE     shift, and go to state 22
    PLUS            shift, and go to state 24
    MINUS           shift, and go to state 25

    primary_expression         go to state 30
    postfix_expression         go to state 31
    unary_expression           go to state 32
    unary_operator             go to state 33
    multiplicative_expression  go to state 34
    additive_expression        go to state 35
    relational_expression      go to state 36
    equality_expression        go to state 37
    and_expression             go to state 38
    exclusive_or_expression    go to state 39
    inclusive_or_expression    go to state 40
    logical_and_expression     go to state 41
    logical_or_expression      go to state 42
    conditional_expression     go to state 43
    assignment_expression      go to state 44
    expression                 go to state 92


State 51

   74 iteration_statement: WHILE OPEN_BRACKET . expression CLOSED_BRACKET statement

    INC_OP          shift, and go to state 8
    DEC_OP          shift, and go to state 9
    NOT             shift, and go to state 12
    AMP             shift, and go to state 13
    TILDE           shift, and go to state 14
    STAR            shift, and go to state 15
    ID              shift, and go to state 16
    NUM             shift, and go to state 17
    REAL            shift, and go to state 18
    STRING_LITERAL  shift, and go to state 19
    OPEN_BRACKET    shift, and go to state 20
    OPEN_SQUARE     shift, and go to state 22
    PLUS            shift, and go to state 24
    MINUS           shift, and go to state 25

    primary_expression         go to state 30
    postfix_expression         go to state 31
    unary_expression           go to state 32
    unary_operator             go to state 33
    multiplicative_expression  go to state 34
    additive_expression        go to state 35
    relational_expression      go to state 36
    equality_expression        go to state 37
    and_expression             go to state 38
    exclusive_or_expression    go to state 39
    inclusive_or_expression    go to state 40
    logical_and_expression     go to state 41
    logical_or_expression      go to state 42
    conditional_expression     go to state 43
    assignment_expression      go to state 44
    expression                 go to state 93


State 52

   34 unary_expression: INC_OP unary_expression .

    $default  reduce using rule 34 (unary_expression)


State 53

   35 unary_expression: DEC_OP unary_expression .

    $default  reduce using rule 35 (unary_expression)


State 54

   75 iteration_statement: DO statement . WHILE OPEN_BRACKET expression CLOSED_BRACKET SEMI

    WHILE  shift, and go to state 94


State 55

   21 primary_expression: OPEN_BRACKET expression . CLOSED_BRACKET
   73 expression: expression . COMMA assignment_expression

    CLOSED_BRACKET  shift, and go to state 95
    COMMA           shift, and go to state 89


State 56

    6 statement: OPEN_CURLY statement_list . CLOSED_CURLY

    CLOSED_CURLY  shift, and go to state 96


State 57

   22 primary_expression: OPEN_SQUARE argument_expression_list . CLOSED_SQUARE
   32 argument_expression_list: argument_expression_list . COMMA assignment_expression

    CLOSED_SQUARE  shift, and go to state 97
    COMMA          shift, and go to state 98


State 58

   31 argument_expression_list: assignment_expression .

    $default  reduce using rule 31 (argument_expression_list)


State 59

    0 $accept: statement_list $end .

    $default  accept


State 60

    1 statement_list: statement statement_list .

    $default  reduce using rule 1 (statement_list)


State 61

    9 declarator: ID .

    $default  reduce using rule 9 (declarator)


State 62

    8 declaration: type_specifier declarator . ASSIGN assignment_expression SEMI
   10 declarator: declarator . OPEN_SQUARE assignment_expression CLOSED_SQUARE
   11           | declarator . OPEN_SQUARE CLOSED_SQUARE

    ASSIGN       shift, and go to state 99
    OPEN_SQUARE  shift, and go to state 100


State 63

   28 postfix_expression: postfix_expression PTR_OP . ID

    ID  shift, and go to state 101


State 64

   29 postfix_expression: postfix_expression INC_OP .

    $default  reduce using rule 29 (postfix_expression)


State 65

   30 postfix_expression: postfix_expression DEC_OP .

    $default  reduce using rule 30 (postfix_expression)


State 66

   25 postfix_expression: postfix_expression OPEN_BRACKET . CLOSED_BRACKET
   26                   | postfix_expression OPEN_BRACKET . argument_expression_list CLOSED_BRACKET
